# rust-kafka-cli-app

./: .gitignore  Cargo.toml  docker-compose.yml  readme.md  run-kafka.sh
src/: main.rs
