[package]
name = "kafka-pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
kafka = { version = "0.8.0" }
tokio = { version = "1", features = ["full"] }
tokio-stream = {version = "0.1" }

